feat(eno core): pogues plus ddi mapping