@@ -1,7 +1,9 @@
 package fr.insee.eno.core.mapping.out.lunatic;
 
+import fr.insee.ddi.lifecycle33.instance.DDIInstanceDocument;
 import fr.insee.eno.core.DDIToEno;
 import fr.insee.eno.core.InToEno;
+import fr.insee.eno.core.PoguesDDIToEno;
 import fr.insee.eno.core.PoguesToEno;
 import fr.insee.eno.core.exceptions.business.ParsingException;
 import fr.insee.eno.core.mappers.LunaticMapper;
@@ -9,6 +11,8 @@ import fr.insee.eno.core.model.EnoQuestionnaire;
 import fr.insee.eno.core.model.question.TextQuestion;
 import fr.insee.eno.core.parameter.EnoParameters;
 import fr.insee.eno.core.parameter.Format;
+import fr.insee.eno.core.serialize.DDIDeserializer;
+import fr.insee.eno.core.serialize.PoguesDeserializer;
 import fr.insee.lunatic.model.flat.ComponentTypeEnum;
 import fr.insee.lunatic.model.flat.Input;
 import fr.insee.lunatic.model.flat.LabelTypeEnum;
@@ -38,7 +42,7 @@ class TextQuestionTest {
         LunaticMapper lunaticMapper = new LunaticMapper();
         lunaticMapper.mapEnoObject(enoQuestionnaire, lunaticQuestionnaire);
         //
-        assertEquals(ComponentTypeEnum.INPUT, lunaticQuestionnaire.getComponents().get(0).getComponentType());
+        assertEquals(ComponentTypeEnum.INPUT, lunaticQuestionnaire.getComponents().getFirst().getComponentType());
     }
 
     @Test
@@ -53,21 +57,26 @@ class TextQuestionTest {
         LunaticMapper lunaticMapper = new LunaticMapper();
         lunaticMapper.mapEnoObject(enoQuestionnaire, lunaticQuestionnaire);
         //
-        assertEquals(ComponentTypeEnum.TEXTAREA, lunaticQuestionnaire.getComponents().get(0).getComponentType());
+        assertEquals(ComponentTypeEnum.TEXTAREA, lunaticQuestionnaire.getComponents().getFirst().getComponentType());
     }
 
-    private static Stream<Arguments> integrationTest() {
+    private static Stream<Arguments> integrationTest() throws ParsingException {
+        ClassLoader classLoader = TextQuestionTest.class.getClassLoader();
+        DDIInstanceDocument ddiQuestionnaire = DDIDeserializer.deserialize(
+                classLoader.getResourceAsStream("integration/ddi/ddi-simple.xml"));
+        fr.insee.pogues.model.Questionnaire poguesQuestionnaire = PoguesDeserializer.deserialize(
+                classLoader.getResourceAsStream("integration/pogues/pogues-simple.json"));
         return Stream.of(
-                Arguments.of(new DDIToEno(), "integration/ddi/ddi-simple.xml"),
-                Arguments.of(new PoguesToEno(), "integration/pogues/pogues-simple.json")
+                Arguments.of(DDIToEno.fromObject(ddiQuestionnaire)),
+                Arguments.of(PoguesToEno.fromObject(poguesQuestionnaire)),
+                Arguments.of(PoguesDDIToEno.fromObjects(poguesQuestionnaire, ddiQuestionnaire))
         );
     }
     @ParameterizedTest
     @MethodSource
-    void integrationTest(InToEno inToEno, String resourcePath) throws ParsingException {
+    void integrationTest(InToEno inToEno) {
         //
         EnoQuestionnaire enoQuestionnaire = inToEno.transform(
-                this.getClass().getClassLoader().getResourceAsStream(resourcePath),
                 EnoParameters.of(EnoParameters.Context.HOUSEHOLD, EnoParameters.ModeParameter.CAWI, Format.LUNATIC));
         Questionnaire lunaticQuestionnaire = new Questionnaire();
         new LunaticMapper().mapQuestionnaire(enoQuestionnaire, lunaticQuestionnaire);
